[project]
name = "tfl-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.2",
    "httpx>=0.28.1",
    "mcp>=1.23.1",
    "pydantic-ai>=1.26.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "ruff>=0.14.7",
]
